zod/tests/ui/zod/fail/enum_empty.stderr
error: deriving zod on empty enums is not supported.
 --> tests/ui/zod/fail/enum_empty.rs:6:6
  |
6 | enum MyEnum {}
  |      ^^^^^^
